--- a/Production/wp-content/themes/lobban/src/sass/_journal.scss
+++ b/Production/wp-content/themes/lobban/src/sass/_journal.scss
@@ -7,7 +7,6 @@
 
 .article time {
 	display: block;
-	font-family: 'karlaitalic', sans-serif;
 	@media (min-width: $breakpoint-medium) {
 	    margin-top: 0.3em;
 	    }
@@ -18,7 +17,6 @@
 
 .article.single time {
 	display: block;
-	font-family: 'karlaitalic', sans-serif;
 	@media (min-width: $breakpoint-medium) {
 	    margin-top: 0.8em;
 	    }
@@ -62,7 +60,10 @@
 
 .category-link .article__content {
 	@media (min-width: $breakpoint-medium) {
-	    margin-top: 0.6em;
+	    margin-top: 0.25em;
+	    }
+	@media (min-width: $breakpoint-large) {
+	    margin-top: 0.45em;
 	    }
 	}
 
@@ -71,7 +72,6 @@
 	}
 
 .article__content .wp-caption-text {
-	font-family: 'karlaitalic', sans-serif;
 	font-size: 0.7em;
 	margin-top: 0.5em;
 	}
